[package]
name = "tree-sitter-valvecfg"
description = "Tree sitter configuration for *.cfg files in Valve games."
version = "1.0.0"
authors = ["Ilya G."]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "valvecfg"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/keycat/tree-sitter-valvecfg"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
